# Cieo.bak

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.clangd/index/: ansicolor_sink-inl.h.43E01482765FBDE6.idx  ansicolor_sink.h.686436814F35D854.idx  async.cpp.24C9B9A6D01BE989.idx  async.h.F06F980DA60E0E45.idx  async_logger-inl.h.3E59EB1540F6C650.idx  async_logger.h.B621585E825F99BF.idx  backtracer-inl.h.3167A81664466EC8.idx  backtracer.h.369AED9D4E84E882.idx  base_sink-inl.h.3D119C672C5B1DA3.idx  base_sink.h.21BE6F34F22220F2.idx  basic_file_sink-inl.h.1E9DE932992B8FAA.idx  basic_file_sink.h.E2CDE0AE813345EC.idx  catch.hpp.2B14E968C3E88047.idx  catch.hpp.3AF4803708226280.idx  cfg.cpp.7F46A0D413AF0647.idx  cieo.cpp.3EC38A8DCE3C4D2F.idx  cieo.cpp.DD93C1DAF66F51E0.idx  circular_q.h.ED971FFFB5A65D73.idx  color_sinks.cpp.C3C8D46013B07B83.idx  common-inl.h.7FEAD3FEB6541C63.idx  common.h.815C7D4E6D37B419.idx  console_globals.h.89E4083F7FA15769.idx  core.h.02DB1B5EAA361712.idx  core.h.3C4D81D3053241D9.idx  daily_file_sink.h.F0B4D9578979759E.idx  file_helper-inl.h.5FDB6826CFCA8522.idx  file_helper.h.F88F0C269BEA0E4E.idx  file_sinks.cpp.AD9F93DBD40EDF51.idx  fmt.cpp.EA18E62380E6BA1E.idx  fmt.h.F37BFD0CCBC568F2.idx  fmt_helper.h.6A0D56480AE15F8E.idx  format-inl.h.5078137268B58B39.idx  format-inl.h.9CBB5B08B155A7B5.idx  format.cc.19339C987380B186.idx  format.h.A965916AC11A305B.idx  format.h.B7D1EB825E0C814C.idx  formatter.h.7A6152D04CB92528.idx  generic.cpp.894B70884B237A03.idx  generic.cpp.C496E76F27EFB811.idx  helpers-inl.h.672B9EAD3E8F8201.idx  (+51 more)
.github/workflows/: develop.yml  release.yml
cieo/: CMakeLists.txt
cieo/include/: compiler.hpp  version.hpp  version.hpp.in
cieo/include/cieo/: logging.hpp  os.hpp  units.hpp  version.hpp  version.hpp.in
cieo/src/: cieo.cpp  logging.cpp
docs/: CMakeLists.txt  Doxyfile.in
docs/doxygen/: header.html
examples/: CMakeLists.txt  simple.cpp
interactive/: CMakeLists.txt
tests/: CMakeLists.txt  logging.cpp  main.cpp  units.cpp
